2022-07-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h: Idem

2022-07-23  Iñaki Ucar  <iucar@fedoraproject.org>

	* inst/include/Rcpp/r/headers.h: Unwind protection is enabled by default
	unless `RCPP_NO_UNWIND_PROTECT` is defined (`RCPP_USE_UNWIND_PROTECT` is
	not checked anymore and has no effect)
	* inst/include/Rcpp/vector/Vector.h: Switch evaluation to `Rcpp_eval`
	* R/Attributes.R: `[[Rcpp::plugins(unwindProtect)]]` is deprecated
	* inst/tinytest/cpp/stack.cpp: Adapted
	* inst/tinytest/test_exceptions.R: Adapted
	* inst/tinytest/test_interface.R: Adapted
	* inst/tinytest/testRcppInterfaceExporter/src/config.h: Removed

2022-07-10  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci-4.1/Dockerfile: Add Dockerfile for 4.1 series
	* .github/workflows/ci.yaml: Add 4.1 to CI matrix
	* .github/workflows/docker.yaml: Do not rebuild versioned ones

2022-07-02  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Date, Version): Release 1.0.9

        * inst/include/Rcpp/config.h: Idem
        * inst/NEWS.Rd: Idem
        * vignettes/rmd/Rcpp.bib: Idem
        * inst/bib/Rcpp.bib: Idem
	* vignettes/pdf/*: Rebuilt

2022-07-01  Dirk Eddelbuettel  <edd@debian.org>

	* man/dependsAttribute.Rd: Use https in URL
	* man/exportAttribute.Rd: Idem
	* man/interfacesAttribute.Rd: Idem
	* DESCRIPTION (URL): Idem
	* README.md: Idem, use Amazon page for Rcpp book

2022-05-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h: Idem

2022-05-25  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_string.R: Add C++11 conditioning for new unit tests

2022-05-23  Dean Scarff  <dos@scarff.id.au>

	* inst/include/Rcpp/String.h: Make less copies of strings via move
	semantics and preserving the buffer/SEXP representation when copying
	* inst/include/RcppCommon.h: include <utility> for std::move